client/src/css/print.css
@media print {
  * {
    text-shadow: none !important;
    color: #000 !important;
    background: transparent !important;
    box-shadow: none !important;
  }

  body {
    width: 100%;
  }

  header {
    display: none !important;
  }

  .bar-bottom {
    display: none !important;
  }

  .top-nav {
    display: none !important;
  }

  .viewport {
    position : static !important;
    margin   : 0 !important;
    padding  : 0 !important;
    width    : 100% !important;
    overflow : hidden !important;
  }

  .view {
    position : static !important;
    height   : 100% !important;
    margin   : 0;
    padding  : 0;
    overflow : hidden !important;
  }

  .content {
    padding  : 0;
    margin   : 0;
    height   : 100% !important;
    width    : 100% !important;
    overflow : hidden !important;
  }


  a,
  a:visited {
    text-decoration: underline;
  }
  a[href]:after {
    content: " (" attr(href) ")";
  }
  abbr[title]:after {
    content: " (" attr(title) ")";
  }
  .ir a:after,
  a[href^="javascript:"]:after,
  a[href^="#"]:after {
    content: "";
  }
  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  img {
    max-width: 100% !important;
  }

  @page  {
    margin: 2cm .5cm;
  }

  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
  .navbar {
    display: none;
  }
  .table td,
  .table th {
    background-color: #fff !important;
  }
  .btn > .caret,
  .dropup > .btn > .caret {
    border-top-color: #000 !important;
  }
  .label {
    border: 1px solid #000;
  }
  .table {
    border-collapse: collapse !important;
  }
  .table-bordered th,
  .table-bordered td {
    border: 1px solid #ddd !important;
  }

  tr,
  td,
  .table tr,
  .table td {
    page-break-inside: avoid !important;
    page-break-after: auto !important;
  }

  thead {
    display: table-header-group;
  }

  tfoot {
    display: table-header-group;
  }

  .visible-print {
    display: block !important;
  }
  table.visible-print {
    display: table;
  }
  tr.visible-print {
    display: table-row !important;
  }
  th.visible-print,
  td.visible-print {
    display: table-cell !important;
  }
  .hidden-print,
  tr.hidden-print,
  th.hidden-print,
  td.hidden-print {
    display: none !important;
  }
}

/* print styles for reports */
@media print {
  .report {
    position   : initial;
    min-height : 100%;
    padding: 0;
  }

  .reportFrame {
    border: none !important;
  }

  .reportBody {
    padding-left  : 15px;
    padding-right : 15px;
    padding-top   : 0;
    margin-top    : 0 !important;
  }

  .report a[href]:after {
    content: none;
  }
}

